--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,5 @@
 name: CI
-on:
-  pull_request:
-    branches:
-      - main
-      - dev
-  push:
-    - '*'
-    tags: '*'
+on: [push, pull_request]
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
@@ -16,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.4.2'
+          - "1.4.2"
           # - '1'
           # - 'nightly'
         os:
