--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,6 @@
+name = "ElsaModels"
+uuid = "e4fc9beb-7cce-4546-aac3-9f1fe08b5b68"
+
 [deps]
 Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
