--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,10 @@ jobs:
       matrix:
         julia-version: ["1.4.2"]
         julia-arch: [x64, x86]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        exclude:
-          - os: macOS-latest
-            julia-arch: x86
+        os: [ubuntu-latest]
+        # exclude:
+        #   - os: macOS-latest
+        #     julia-arch: x86
 
     steps:
       - uses: actions/checkout@v2
